9주차 과제 함수, 폼 양식

--- a/ch07/ex7radio.html
+++ b/ch07/ex7radio.html
@@ -12,7 +12,7 @@
             <li>이메일 : 수신 <input type = "radio" name = "email_ok" value = "예">
                 비수신 <input type = "radio" name = "email_ok" value = "아니요" checked>
             </li>
-            <li>input type = "submit" value = "확인"></li>
+            <li><input type = "submit" value = "확인"></li>
         </ul>
     </form>
 </body>
