--- a/ch07/ex11select.html
+++ b/ch07/ex11select.html
@@ -10,7 +10,7 @@
                 <select name = "email2">
                     <option value = "" selected>선택하세요!</option>
                     <option value = "naver.com">naver.com</option>
-                    <option value = "google.com">gmail.com</option>
+                    <option value = "gmail.com">gmail.com</option>
                     <option value = "hanmail.net">hanmail.net</option>
                 </select>
             </li>
