--- a/ch07/ex1form.html
+++ b/ch07/ex1form.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta charst = "utf-8">
+        <meta charset = "utf-8">
     </head>
 <body>
     <form name = "form1" method = "post" action = "ex1veiw.php">
